--- a/css/_tasks/center_vertical_align/center_vertical_align.html
+++ b/css/_tasks/center_vertical_align/center_vertical_align.html
@@ -6,5 +6,6 @@
   </style>
 </head>
 <body>
+  <a href="https://css-tricks.com/centering-css-complete-guide/">https://css-tricks.com/centering-css-complete-guide/</a>
 </body>
 </html>
