--- a/jquery/_doc/index.html
+++ b/jquery/_doc/index.html
@@ -1,339 +1,7 @@
-<!DOCTYPE html>
-<html lang="ru">
-
-<head>
-  <meta charset="utf-8">
-</head>
-
-<body>
-<h1>jQuery doc</h1>
-<h2>КАРТА ФУНКЦИЙ</h2>
-<h3>Селекторы</h3>
+<div id="toc"></div>
+<h2>Карта функций</h2>
+<h3>События</h3>
 <p><strong>Базовые</strong></p>
 <ul>
-  <li><a href="function_map/selectors/base.html#id">#id</a></li>
-  <li><a href="function_map/selectors/base.html#class">.class</a></li>
-  <li><a href="function_map/selectors/base.html#tagname">tagName</a></li>
-  <li><a href="function_map/selectors/base.html#all">*</a></li>
+  <li><a href="functions_map/events.html#on" title="Устанавливает обработчик события на выбранные элементы страницы.">.on()</a></li>
 </ul>
-<p><strong>Взаимодействия</strong></p>
-first, second, ...
-outer inner
-parent > child
-prev + next
-prev ~ next
-<p><strong>По атрибутам</strong></p>
-[name]
-[name = value]
-[name != value]
-[name ^= value]
-[name $= value]
-[name *= value]
-[name ~= value]
-[name |= value]
-[first][second][...
-Простые фильтры
-:first
-:last
-:eq(index)
-:not(selector)
-:even
-:odd
-:gt(n)
-:lt(n)
-:header
-:animated
-:hidden
-:visible
-:lang()
-Фильтры дочерних 
-элементов
-:first-child
-:last-child
-:nth-child(conditions)
-:nth-child-last(conditions)
-:only-child
-:first-of-type
-:last-of-type
-Фильтры по содержимому
-:contains(text)
-:empty
-:has(selector)
-:parent
-Фильтры форм
-:input
-:button
-:radio
-:checkbox
-:text
-:password
-:file
-:submit
-:reset
-:image
-:focus
-:selected
-:checked
-:enabled
-:disabled
-События
-Базовые
-.on()
-.bind()
-.live()
-.delegate()
-.one()
-.unbind()
-.off()
-.die()
-.undelegate()
-.trigger()
-.triggerHandler()
-jQuery.proxy()
-event
-Мышь
-.click()
-.dblclick()
-.hover()
-.mousedown()
-.mouseup()
-.mouseenter()
-.mouseleave()
-.mousemove()
-.mouseout()
-.mouseover()
-.toggle()
-Клавиатура
-.keydown()
-.keyup()
-.keypress()
-Элементы формы
-.focus()
-.blur()
-.focusin()
-.focusout()
-.select()
-.submit()
-.change()
-Загрузка страницы
-.ready()
-.load()
-.unload()
-События браузера
-.error()
-.resize()
-.scroll()
-Работа с набором элементов
-Перемещения по DOM
-.children()
-.closest()
-.find()
-.next()
-.nextAll()
-.nextUntil()
-.offsetParent()
-.parent()
-.parents()
-.parentsUntil()
-.prev()
-.prevAll()
-.prevUntil()
-.siblings()
-Обход набора
-.each()
-.map()
-Фильтрация набора
-.eq()
-.filter()
-.first()
-.has()
-.is()
-.last()
-.not()
-.slice()
-Другие методы
-.add()
-.andSelf()
-.contents()
-.end()
-Эффекты
-Управление анимацией
-.animate()
-.queue()
-.clearQueue()
-.dequeue()
-.stop()
-.delay()
-.toggle()
-$.fx.off
-$.fx.interval
-Готовые анимации
-.hide()
-.show()
-.slideUp()
-.slideDown()
-.slideToggle()
-.fadeIn()
-.fadeOut()
-.fadeTo()
-.fadeToggle()
-Манипуляции
-Атрибуты
-.attr()
-.prop()
-.removeAttr()
-.removeProp()
-.addClass()
-.removeClass()
-.toggleClass()
-.hasClass()
-.val()
-Стили и параметры
-.css()
-.height()
-.outerHeight()
-.innerHeight()
-.width()
-.outerWidth()
-.innerWidth()
-.offset()
-.position()
-.offsetParent()
-.scrollTop()
-.scrollLeft()
-Клонирование элементов
-.clone()
-Замена элементов
-.replaceWith()
-.replaceAll()
-Добавление содержимого
-.html()
-.text()
-.append()
-.appendTo()
-.prepend()
-.prependTo()
-.after()
-.insertAfter()
-.before()
-.insertBefore()
-.wrap()
-.wrapAll()
-.wrapInner()
-Удаление содержимого
-.remove()
-.detach()
-.empty()
-.unwrap()
-Ajax
-Запросы к серверу
-$.get()
-$.post()
-.load()
-$.getJSON()
-$.getScript()
-Низкоуровневые запросы
-$.ajax()
-$.ajaxSetup()
-Ajax-события
-.ajaxSend()
-.ajaxComplete()
-.ajaxSuccess()
-.ajaxError()
-.ajaxStart()
-.ajaxStop()
-Вспомогательные функции
-$.param()
-.serialize()
-.serializeArray()
-Коллбэки
-Объекты Deferred
-deferred
-.done()
-.fail()
-.then()
-.always()
-.progress()
-.resolve()
-.resolveWith()
-.reject()
-.rejectWith()
-.notify()
-.notifyWith()
-.isResolved()
-.isRejected()
-.state()
-.promise()
-.pipe()
-Объекты Callbacks
-callbacks
-.add()
-.disable()
-.empty()
-.fire()
-.fireWith()
-.fired()
-.has()
-.remove()
-Остальное
-Функции ядра
-jQuery() или $()
-$.noConflict()
-$.sub()
-$.when()
-Работа с данными
-.data()
-.removeData()
-$.hasData()
-Свойства
-$.browser
-$.support
-$.fx.off
-$.fx.interval
-.context
-.length
-.selector
-Элементы набора
-.get()
-.toArray()
-.index()
-.size()
-Утилиты
-$.contains()
-$.extend()
-$.globalEval()
-$.grep()
-$.inArray()
-$.isArray()
-$.isEmptyObject()
-$.isFunction()
-$.isPlainObject()
-$.isWindow()
-$.isXMLDoc()
-$.makeArray()
-$.merge()
-$.noop()
-$.parseJSON()
-$.parseXML()
-$.trim()
-$.type()
-$.unique()
-jQuery UI
-Плагины поведения
-Draggable
-Droppable
-Resizable
-Selectable
-Sortable
-Виджеты
-Аккордеон
-Вкладки
-Календарь
-Диалоговое окно
-Автозаполнение
-Кнопки
-Ползунок
-Индикатор выполнения
-</body>
-
-</html>
