--- a/js/string/string.html
+++ b/js/string/string.html
@@ -81,20 +81,36 @@
 
   document.log('----------------------------------------')
   document.log('> Преобразование в int'.green())
-  document.log('0', parseInt('0'))
-  document.log('+0', parseInt('+0'))
-  document.log('-0', parseInt('-0'))
-  document.log('+000', parseInt('+000'))
-  document.log('-1', parseInt('-1'))
-  document.log('00001', parseInt('00001'))
-  document.log('-00001', parseInt('-00001'))
-  document.log('+00001', parseInt('+00001'))
-  document.log('101.1', parseInt('101.1'))
-  document.log('0.1', parseInt('0.1'))
-  document.log('-0.1', parseInt('-0.1'))
-  document.log('-0000.100', parseInt('-0000.100'))
+  document.log('0: ', parseInt('0'))
+  document.log('+0: ', parseInt('+0'))
+  document.log('-0: ', parseInt('-0'))
+  document.log('+000: ', parseInt('+000'))
+  document.log('-1: ', parseInt('-1'))
+  document.log('00001: ', parseInt('00001'))
+  document.log('-00001: ', parseInt('-00001'))
+  document.log('+00001: ', parseInt('+00001'))
+  document.log('101.1: ', parseInt('101.1'))
+  document.log('0.1: ', parseInt('0.1'))
+  document.log('-0.1: ', parseInt('-0.1'))
+  document.log('-0000.100: ', parseInt('-0000.100'))
 
-  document.log('Number(\'-0000.100\')', Number('-0000.100'))
+  document.log('----------------------------------------')
+  document.log('> Преобразование в Number/Float'.green())
+  document.log('"": ', parseFloat(''))
+  document.log('0: ', parseFloat('0'))
+  document.log('+0: ', parseFloat('+0'))
+  document.log('-0: ', parseFloat('-0'))
+  document.log('+000: ', parseFloat('+000'))
+  document.log('-1: ', parseFloat('-1'))
+  document.log('00001: ', parseFloat('00001'))
+  document.log('-00001: ', parseFloat('-00001'))
+  document.log('+00001: ', parseFloat('+00001'))
+  document.log('101.1: ', parseFloat('101.1'))
+  document.log('0.1: ', parseFloat('0.1'))
+  document.log('-0.1: ', parseFloat('-0.1'))
+  document.log('-0000.100: ', parseFloat('-0000.100'))
+
+  document.log('Number(\'-0000.100\'): ', Number('-0000.100'))
   </script>
 </body>
 
