--- a/js/date/data.html
+++ b/js/date/data.html
@@ -11,6 +11,7 @@
   "use strict"
   var timeInMs = Date.now()
   document.log('timeInMs: ', timeInMs)
+  document.log('typeof(timeInMs): ', typeof(timeInMs))
 
   var date = new Date(timeInMs)
   var year = date.getFullYear()
@@ -36,6 +37,7 @@
 
   var date_time = unixtime_to_date_time(1474298509)
   document.log('date_time: ', date_time)
+  document.log('typeof(date_time): ', typeof(date_time))
   </script>
 </body>
 
