--- a/js/string/string.html
+++ b/js/string/string.html
@@ -10,13 +10,21 @@
   <script type="text/javascript">
   // Разбить в массив
   document.log('> Разбить в массив'.green())
-  var str = "How are you doing today?";
-  var res = str.split(" ")
-  document.log('res: ', res)
-  document.log('> Разбить в массив'.green())
-  var str = 'Гарри Трамп ,Фрэд Барни, Хелен Ригби , Билл Абель ,Крис Ханд ';
-  var res = str.split(/\s*,\s*/)
-  document.log('res: ', res)
+  document.log('> по пробелу'.blue())
+  var a = "How are you doing today?";
+  var b = a.split(" ")
+  document.log('a: ', a)
+  document.log('b: ', b)
+  document.log('> по запятым, не учитывая пробелы до или после запятой'.blue())
+  var a = 'Гарри Трамп ,Фрэд Барни, Хелен Ригби , Билл Абель ,Крис Ханд ';
+  var b = a.split(/\s*,\s*/)
+  document.log('a: ', a)
+  document.log('b: ', b)
+  document.log('> по запятой с пробелом после'.blue())
+  var a = '1,2, 3, 1,4 , 1,5 ,Крис Ханд ';
+  var b = a.split(/\s*,\s+|\s*,(?=[^\d])/)
+  document.log('a: ', a)
+  document.log('b: ', b)
 
   // Метод trim() удаляет пробельные символы с начала и конца строки.
   document.log('> Метод trim() удаляет пробельные символы с начала и конца строки.'.green())
