--- a/css/_tasks/center_vertical_align/center_vertical_align.html
+++ b/css/_tasks/center_vertical_align/center_vertical_align.html
@@ -7,5 +7,14 @@
 </head>
 <body>
   <a href="https://css-tricks.com/centering-css-complete-guide/">https://css-tricks.com/centering-css-complete-guide/</a>
+  <p>если вертикальное выравнивание с помощью <pre>.parent {
+  position: relative;
+}
+.child {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+}</pre> то добавить хак если внутри выравнивания есть изображение : <pre>    -webkit-backface-visibility: hidden;
+    -webkit-transform: translateZ(0) scale(1.0, 1.0);</pre></p>
 </body>
 </html>
