--- a/rails/market/doc.html
+++ b/rails/market/doc.html
@@ -2,3 +2,5 @@ Pt.products.first.c1.name
 Pt.products.first.pricelists.where(:angar_id => 36).first.amount
 SALE_STATISTIC['36'][Pt.products.first.articul]
 CreateSaleStatisticConstant.new.process!
+
+Pt.products.first.quantity 36
