--- a/js/string/string.html
+++ b/js/string/string.html
@@ -129,6 +129,15 @@
   document.log('-0.1: ', parseFloat('-0.1'))
   document.log('-0000.100: ', parseFloat('-0000.100'))
 
+  var a = 'asd'
+  var b = parseFloat(a)
+  var bt = typeof b
+  var c = (b==NaN)
+  document.log('a: ', a)
+  document.log('b: ', b)
+  document.log('bt: ', bt)
+  document.log('c: ', c)
+
   document.log('Number(\'-0000.100\'): ', Number('-0000.100'))
 
   var a = '234'
