--- a/git/all.html
+++ b/git/all.html
@@ -195,6 +195,12 @@ master
 <p>Теперь <var>git status</var> покажет изменения, которые мы проверили в <q>C</q>. Мы ничего не потеряли!</p>
 <li><code>git reset --soft HEAD~1</code> — Это не только оставляет файлы в покое, но и оставляет их в индексе. Когда мы сделаем <var>git status</var>, мы увидим, что те же файлы находятся в индексе, как и раньше. Фактически, сразу после этой команды мы можем сделать <var>git commit</var> — это переделает коммит <q>C</q>, который у нас был.</li>
 </ol>
+<h2>Переключиться</h2>
+<p><strong>на ветку которая есть только удаленно</strong></p>
+<pre>
+git fetch
+git checkout branchName
+</pre>
 <h2>Удалённые репозитории</h2>
 <h3>Ветки удалённые сделаем отслеживаемыми</h3>
 <code class="copyToClipboard">git remote -v</code> — проверим ссылки на удаленный репозиторий
