--- a/js/array/array.html
+++ b/js/array/array.html
@@ -79,6 +79,13 @@
   document.log('b: ', b)
 
   document.log()
+  document.log('> Пересечение массивов'.green())
+  var a = [1,2,3,2]
+  var b = [2,3,2,0]
+  var c = a.filter((e) => b.includes(e))
+  document.log('c: ', c)
+
+  document.log()
   document.log('> привести к уникальным значениям примерно как в _.uniq()'.green())
   document.log('возвращает новый массив'.blue())
   var a = ['2', 1, 'asd', 2, 1, 'asd', '1', 2, '', , 0]
