--- a/jquery/_tasks/sort_dom/sort_dom.html
+++ b/jquery/_tasks/sort_dom/sort_dom.html
@@ -11,17 +11,29 @@
     <div class="item" data-am="0">0</div>
     <div class="item" data-am="1">1</div>
     <div class="item" data-am="0">0</div>
-    <div class="item" data-am="1">1</div>
+    <div class="item to3" data-am="1">3</div>
     <div class="item" data-am="0">0</div>
   </div>
   <script src="/theme/bower/jquery/dist/jquery.min.js"></script>
   <script type="text/javascript">
   $(document).ready(function() {
-    $('.list .item').sort(function(a, b) {
-      console.log('a: ', a)
-      console.log('b: ', b)
-      return 0
-    }).appendTo('.list')
+
+    var sorted = $('.list .item').sort(function(a, b) {
+      var a = $(a).data('am')
+      var b = $(b).data('am')
+      return a-b
+    })
+    console.log('sorted: ', sorted)
+    sorted.detach()
+    sorted.appendTo('.list')
+
+    var to3 = $('div.list .item.to3')
+    to3.detach()
+
+    var el2 = $('div.list .item:eq(1)')
+    to3.insertAfter(el2)
+
+
   })
   </script>
 </body>
