--- a/ruby/all.html
+++ b/ruby/all.html
@@ -67,7 +67,27 @@ class String
 end
 </pre>
 
-<h2>Конструкции, операторы...</h2>
+<h2>Операторы</h2>
+<h3>Присвоения</h3>
+<table class="table">
+  <caption>Операторы присвоения</caption>
+  <thead>
+    <tr>
+      <th>Оператор</th>
+      <th>Пример</th>
+      <th>Описание</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td><code>|=</code></td>
+      <td><code>a |= b</code></td>
+      <td>эквивалентно <code>a = a | b</code></td>
+    </tr>
+  </tbody>
+</table>
+
+<h2>Конструкции...</h2>
 <p><strong>case</strong></p>
 <pre class="prettyprint lang-rb">
 a = 1..5
