--- a/linux/all.html
+++ b/linux/all.html
@@ -234,8 +234,9 @@ SELECTED_EDITOR="/usr/bin/subl"
 </ul>
 <p>Подключить SFTP в панели: <kbd>F9</kbd> → выбрать соответствующий пункт (<kbd>↑↓</kbd>) → <kbd>Enter</kbd></p>
 <p>Отключиться в панели от соединения: <code>cd</code> <kbd>Enter</kbd></p>
-<ul>
-</ul>
+<h5>Копирование / втсавка</h5>
+<p>Скопировать и вставить из редактора mc: выделить мышью с <kbd>Shift</kbd>, вставка средней кнопкой мыши (или нажатием левой и правой кнопкой ондновременно)</p>
+
 <h3>Shutter (PrintScreen as PicPick)</h3>
 <h4>Settings</h4>
 <ul>
