--- a/rails/market/doc.html
+++ b/rails/market/doc.html
@@ -1,6 +1,12 @@
 Pt.products.first.c1.name
 Pt.products.first.pricelists.where(:angar_id => 36).first.amount
 SALE_STATISTIC['36'][Pt.products.first.articul]
-CreateSaleStatisticConstant.new.process!
 
 Pt.products.first.quantity 36
+
+Создание констант
+
+CreateSaleStatisticConstant.new.process!
+CreateTraderConstant.new.process!
+MetricConstantCreate.new.process!
+CreateStrictColorConstant.new.process!
