--- a/linux/all.html
+++ b/linux/all.html
@@ -39,6 +39,15 @@ Disk identifier: 0x6f20736b
 <p><code>export PS1='$(whoami)@$(hostname):$(pwd)$ '</code></p>
 <p>or</p>
 <p><code>export PS1='$(whoami)@$(hostname):$(pwd)'</code></p>
+<h3>Сочетания клавишь в скринах (screen)</h3>
+<ul>
+    <li><kbd>Ctrl</kbd> + <kbd>a</kbd>, <kbd>d</kbd> — выйти из скрина</li>
+    <li><kbd>Ctrl</kbd> + <kbd>a</kbd>; <kbd>Esc</kbd> — перейти в режим прокрутки/копирования</li>
+    <li><kbd>Enter</kbd> ; <kbd>Enter</kbd> — выйти из режима прокрутки/копирования</li>
+    <li><kbd>Space</kbd> — команда помечающая начало и конец копируемого фрагмента в режиме копирования</li>
+    <li><kbd>c</kbd> — команда переключающая в блочный режим выделения (после начала выделения по <kbd>Space</kbd>)</li>
+    <li><kbd>Ctrl</kbd> + <kbd>a</kbd>; <kbd>]</kbd> — вставка скопированного текста после выхода из режима прокрутки/копирования</li>
+</ul>
 
 <h2>Обновления, установки...</h2>
 <h3>Upgrade mysql 5.5 to 5.6 ubuntu 14.04</h3>
