--- a/bash/all.html
+++ b/bash/all.html
@@ -373,13 +373,18 @@ $ scp ?
     <li><code>screen -r</code> — список скринов или если он один сразу зайти в него;</li>
     <li><code>screen -r 2398</code> — зайти в скрин с заданным идентификатором;</li>
     <li><code>screen -S foo</code> — создать скрин с алиасом;</li>
-    <li><code>screen -r foo</code> — зайти в скрин с заданным алиасом.</li>
+    <li><code>screen -r foo</code> — зайти в скрин с заданным алиасом;</li>
+    <li><code>screen -S 2398 -X quit</code> — kill screen session;</li>
+    <li><code>screen -X -S 2398 quit</code> — —//—.</li>
 </ul>
 <p><strong>Сочетания клавишь:</strong></p>
 <ul>
-    <li><kbd>Ctrl</kbd> + <kbd>A</kbd> , <kbd>D</kbd> — выйти из скрина</li>
-    <li><kbd>Ctrl</kbd> + <kbd>A</kbd> ; <kbd>Esc</kbd> — перейти в режим прокрутки/выделения</li>
-    <li><kbd>Enter</kbd> ; <kbd>Enter</kbd> — выйти из режима прокрутки/выделения</li>
+    <li><kbd>Ctrl</kbd> + <kbd>a</kbd>, <kbd>d</kbd> — выйти из скрина</li>
+    <li><kbd>Ctrl</kbd> + <kbd>a</kbd>; <kbd>Esc</kbd> — перейти в режим прокрутки/копирования</li>
+    <li><kbd>Enter</kbd> ; <kbd>Enter</kbd> — выйти из режима прокрутки/копирования</li>
+    <li><kbd>Space</kbd> — команда помечающая начало и конец копируемого фрагмента в режиме копирования</li>
+    <li><kbd>c</kbd> — команда переключающая в блочный режим выделения (после начала выделения по <kbd>Space</kbd>)</li>
+    <li><kbd>Ctrl</kbd> + <kbd>a</kbd>; <kbd>]</kbd> — вставка скопированного текста после выхода из режима прокрутки/копирования</li>
 </ul>
 <h2>Программирование</h2>
 <ul>
