--- a/rails/all.html
+++ b/rails/all.html
@@ -122,6 +122,15 @@ end
 </pre>
 
 <h2>Миграции</h2>
+<p><code>rails generate migration AddColumnIsHasImgToMarketProductBrands</code> — создать миграцию</p>
+<pre class="prettyprint lang-ruby">
+class AddColumnIsHasImgToMarketProductBrands < ActiveRecord::Migration[5.0]
+  def change
+    add_column :market_product_brands, :is_has_img, :boolean, null: false, default: false
+  end
+end
+</pre>
+<p><code class="copyToClipboard">rails db:migrate</code></p>
 <h3>Экспорт/импорт схемы</h3>
 <p>Настройка экспорта схемы в файле <code class="copyToClipboard">config/environments/development.rb</code>:</p>
 <pre class="prettyprint lang-ruby">
