--- a/js/_tasks/market_slider/market_slider.html
+++ b/js/_tasks/market_slider/market_slider.html
@@ -7,6 +7,9 @@
 </head>
 
 <body>
+  <p>
+    <span class="js_show_all_products">Показать все товары</span>
+  </p>
   <div class="products limited">
     <div class="h1">
       <span class="pre_slider-next"></span>
@@ -14,36 +17,38 @@
       <a href="./">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi nam repudiandae adipisci, officia, quo atque aut distinctio asperiores doloribus assumenda, corporis. Neque facilis, dicta dolorum maxime consequatur repellendus, vero rerum.</a>
     </div>
     <div class="cat_products">
-      <script></script><!--
-   --><div class="product"></div><!--
-   --><script></script><!--
-   --><div class="product"></div><!--
-   --><script></script><!--
-   --><div class="product"></div><!--
-   --><script></script><!--
-   --><div class="product"></div><!--
-   --><script></script><!--
-   --><div class="product"></div><!--
-   --><script></script><!--
-   --><div class="product"></div><!--
-   --><script></script><!--
-   --><div class="product"></div><!--
-   --><script></script><!--
-   --><div class="product"></div><!--
-   --><script></script><!--
-   --><div class="product"></div><!--
-   --><script></script><!--
-   --><div class="product"></div><!--
-   --><script></script><!--
-   --><div class="product"></div><!--
-   --><script></script><!--
-   --><div class="product"></div><!--
-   --><script></script><!--
-   --><div class="product"></div><!--
-   --><script></script><!--
-   --><div class="product"></div><!--
-   --><script></script><!--
-   --><div class="product"></div>
+      <div class="line">
+        <script></script><!--
+     --><div class="product"></div><!--
+     --><script></script><!--
+     --><div class="product"></div><!--
+     --><script></script><!--
+     --><div class="product"></div><!--
+     --><script></script><!--
+     --><div class="product"></div><!--
+     --><script></script><!--
+     --><div class="product"></div><!--
+     --><script></script><!--
+     --><div class="product"></div><!--
+     --><script></script><!--
+     --><div class="product"></div><!--
+     --><script></script><!--
+     --><div class="product"></div><!--
+     --><script></script><!--
+     --><div class="product"></div><!--
+     --><script></script><!--
+     --><div class="product"></div><!--
+     --><script></script><!--
+     --><div class="product"></div><!--
+     --><script></script><!--
+     --><div class="product"></div><!--
+     --><script></script><!--
+     --><div class="product"></div><!--
+     --><script></script><!--
+     --><div class="product"></div><!--
+     --><script></script><!--
+     --><div class="product"></div>
+      </div>
     </div>
   </div>
   <script type="text/javascript" src="/theme/bower/jquery/dist/jquery.min.js"></script>
