--- a/js/_tasks/market_slider/market_slider.html
+++ b/js/_tasks/market_slider/market_slider.html
@@ -19,39 +19,40 @@
     <div class="cat_products">
       <div class="line">
         <script></script><!--
-     --><div class="product"></div><!--
+     --><div class="product">1</div><!--
      --><script></script><!--
-     --><div class="product"></div><!--
+     --><div class="product">2</div><!--
      --><script></script><!--
-     --><div class="product"></div><!--
+     --><div class="product">3</div><!--
      --><script></script><!--
-     --><div class="product"></div><!--
+     --><div class="product">4</div><!--
      --><script></script><!--
-     --><div class="product"></div><!--
+     --><div class="product">5</div><!--
      --><script></script><!--
-     --><div class="product"></div><!--
+     --><div class="product">6</div><!--
      --><script></script><!--
-     --><div class="product"></div><!--
+     --><div class="product">7</div><!--
      --><script></script><!--
-     --><div class="product"></div><!--
+     --><div class="product">8</div><!--
      --><script></script><!--
-     --><div class="product"></div><!--
+     --><div class="product">9</div><!--
      --><script></script><!--
-     --><div class="product"></div><!--
+     --><div class="product">10</div><!--
      --><script></script><!--
-     --><div class="product"></div><!--
+     --><div class="product">11</div><!--
      --><script></script><!--
-     --><div class="product"></div><!--
+     --><div class="product">12</div><!--
      --><script></script><!--
-     --><div class="product"></div><!--
+     --><div class="product">13</div><!--
      --><script></script><!--
-     --><div class="product"></div><!--
+     --><div class="product">14</div><!--
      --><script></script><!--
-     --><div class="product"></div>
+     --><div class="product">15</div>
       </div>
     </div>
   </div>
   <script type="text/javascript" src="/theme/bower/jquery/dist/jquery.min.js"></script>
+  <script type="text/javascript" src="liner.js"></script>
   <script type="text/javascript" src="market_slider.js"></script>
 </body>
 
