--- a/js/_tasks/market_slider/market_slider.html
+++ b/js/_tasks/market_slider/market_slider.html
@@ -12,12 +12,12 @@
   </p>
   <div class="products limited">
     <div class="h1">
-      <span class="pre_slider-next"></span>
-      <span class="pre_slider-prev"></span>
+      <span class="liner-next" data-liner_id="1"></span>
+      <span class="liner-prev" data-liner_id="1"></span>
       <a href="./">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi nam repudiandae adipisci, officia, quo atque aut distinctio asperiores doloribus assumenda, corporis. Neque facilis, dicta dolorum maxime consequatur repellendus, vero rerum.</a>
     </div>
-    <div class="cat_products">
-      <div class="line">
+    <div class="liner" data-liner_id="1">
+      <div class="liner-line">
         <script></script><!--
      --><div class="product">1</div><!--
      --><script></script><!--
