--- a/html/input/input.html
+++ b/html/input/input.html
@@ -7,6 +7,7 @@
   <form>
    <p><input type="text" name="created" size="1"></p>
    <p><input type="submit"></p>
+   <input type="file" name="images" accept="image/jpeg,image/png,image/gif,image/tiff" multiple="">
   </form>
  </body>
 </html>
