--- a/jquery/_doc/index.html
+++ b/jquery/_doc/index.html
@@ -1,7 +1,21 @@
-<div id="toc"></div>
+
+
 <h2>Карта функций</h2>
+
+
 <h3>События</h3>
+
+
 <p><strong>Базовые</strong></p>
 <ul>
-  <li><a href="functions_map/events.html#on" title="Устанавливает обработчик события на выбранные элементы страницы.">.on()</a></li>
+  <li><a href="on" class="doc" title="Устанавливает обработчик события на выбранные элементы страницы.">.on()</a></li>
+</ul>
+
+
+<h3>Работа с набором элементов</h3>
+
+
+<p><strong>Перемещения по DOM</strong></p>
+<ul>
+  <li><a href="prevUntil" class="doc" title="Находит элементы, которые лежат перед каждым из выбранных, но не дальше элемента, соответствующего заданному селектору.">.prevUntil()</a></li>
 </ul>
