--- a/rails/market/doc.html
+++ b/rails/market/doc.html
@@ -10,3 +10,13 @@ CreateSaleStatisticConstant.new.process!
 CreateTraderConstant.new.process!
 MetricConstantCreate.new.process!
 CreateStrictColorConstant.new.process!
+
+
+
+<h2>Наличие</h2>
+<p><strong>Обновить зависимости наличий:</strong></p>
+<ul>
+  <li><code>rails import:amountrule</code></li>
+  <li><code>rails create:is_amountrule</code></li>
+</ul>
+<p><code>rails import:amountrule create:is_amountrule</code></p>
