--- a/linux/all.html
+++ b/linux/all.html
@@ -3,7 +3,14 @@
 как преобразуется домен в ip
 как работает http протокол
 
+
+<h2>Режим восстановления</h2>
+<p>Как переключить файловую систему в режим чтения записи (file system in recovery mode to read-write mode): <code>mount -o rw,remount /</code></p>
+
+
 <h2>synaptic - менеджер пакетов</h2>
+
+
 <h2>форматирование флешки</h2>
 <p>проверим наличие нашего Flash-накопителя:</p>
 <pre class="copyToClipboard">fdisk -l</pre>
