--- a/rails/market/doc.html
+++ b/rails/market/doc.html
@@ -20,3 +20,9 @@ CreateStrictColorConstant.new.process!
   <li><code>rails create:is_amountrule</code></li>
 </ul>
 <p><code>rails import:amountrule create:is_amountrule</code></p>
+<h2>Обмен с 1С</h2>
+<ul>
+  <li>Класс: <code class="copyToClipboard">app/logic/concern/scopes/obmen.rb</code></li>
+  <li>с настройками в файле <code class="copyToClipboard">app/logic/concern/scopes/obmen/config.rb</code></li>
+  <li>основные методы в файле <code class="copyToClipboard">app/logic/concern/scopes/obmen/methods.rb</code></li>
+</ul>
