--- a/ruby/all.html
+++ b/ruby/all.html
@@ -28,12 +28,11 @@ sudo apt-get install build-essential
 <p>Использование: <code>require "ap"; require "pp"; ap some_object; pp some_object</code></p>
 
 <h2>Консоль</h2>
+<p><code class="copyToClipboard">load './somefile.rb'</code> — выполнить файл из рельсовой консоли (rails c).</p>
+<p><code class="copyToClipboard">ruby './somefile.rb'</code> — выполнить файл из шел.</p>
+<p><code>irb</code> — запустить интерактивную оболочку руби.</p>
 <h3>Запретить кешировать модули и классы для rails c</h3>
 <p>Добавить в .bashrc строку: <code class="copyToClipboard">export DISABLE_SPRING=1</code></p>
-<h3>Выполнить файл из рельсовой консоли руби:</h3>
-<code class="copyToClipboard">load './somefile.rb'</code>
-<h3>Выполнить файл из баш консоли:</h3>
-<code class="copyToClipboard">ruby './somefile.rb'</code>
 <h3>Colorize, вывод в цвете</h3>
 <pre class="prettyprint lang-rb">
 class String
